--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@ layout: default
     {{ post.content }}
   </div>
   <div class="meta">
-    <div class="byline">Posted {{ post.date | format_date_in_english }}</div>
+    <div class="byline">Posted {{ post.date | date: '%Y-%m-%d' }}</div>
     <div class="links">&raquo;&nbsp;&nbsp; <a href="{{ post.url }}#disqus_thread">Comments</a></div>
   </div>
 </div>
